添加菜单，修改中文
添加菜单，把文章尽量改中文名

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ cover: 'http://www.abisolutions.org.uk/website/images/ConferencesHR.jpg'
 
     <div class="clearfix">
 
-      <h1 class="event-time-heading fix-top">Future {% if site.event_label %} {{site.event_label}} {% else %} Events {% endif %} </h1>
+      <h1 class="event-time-heading fix-top">计划 {% if site.event_label %} {{site.event_label}} {% else %} 小刚的首页 {% endif %} </h1>
 
       {% for post in site.posts reversed %}
 
@@ -37,7 +37,7 @@ cover: 'http://www.abisolutions.org.uk/website/images/ConferencesHR.jpg'
     </div>
     <div class="clearfix">
 
-      <h1 class="event-time-heading">Past {% if site.event_label %} {{site.event_label}} {% else %} Events {% endif %} </h1>
+      <h1 class="event-time-heading">笔记 {% if site.event_label %} {{site.event_label}} {% else %} Events {% endif %} </h1>
       {% for post in site.posts %}
 
         {% capture blogDate %}{{post.date | date: '%s' }}{% endcapture %}
